
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int elapsed ;
 int exit (int) ;
 int getpid () ;
 int kbs ;
 int printf (char*,int,...) ;
 int sendcount ;
 int time (int ) ;

void stats(int signum)
{
 kbs = (sendcount*6)/(time(0)-elapsed)/1024;
 printf("\npid: %d, ran for %u seconds\n",getpid(),(time(0) - elapsed));
 printf("%u packets out, total: %u Kb/s\n",sendcount,kbs);
 printf("aborting due to signal %d\n",signum);
 exit(32+signum);
}
