; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_345.c_stats.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_345.c_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sendcount = common dso_local global i32 0, align 4
@elapsed = common dso_local global i32 0, align 4
@kbs = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"\0Apid: %d, ran for %u seconds\0A\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"%u packets out, total: %u Kb/s\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"aborting due to signal %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stats(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @sendcount, align 4
  %4 = mul nsw i32 %3, 6
  %5 = call i32 @time(i32 0)
  %6 = load i32, i32* @elapsed, align 4
  %7 = sub nsw i32 %5, %6
  %8 = sdiv i32 %4, %7
  %9 = sdiv i32 %8, 1024
  store i32 %9, i32* @kbs, align 4
  %10 = call i32 (...) @getpid()
  %11 = call i32 @time(i32 0)
  %12 = load i32, i32* @elapsed, align 4
  %13 = sub nsw i32 %11, %12
  %14 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13)
  %15 = load i32, i32* @sendcount, align 4
  %16 = load i32, i32* @kbs, align 4
  %17 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i32 %15, i32 %16)
  %18 = load i32, i32* %2, align 4
  %19 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i32 %18)
  %20 = load i32, i32* %2, align 4
  %21 = add nsw i32 32, %20
  %22 = call i32 @exit(i32 %21) #3
  unreachable
}

declare dso_local i32 @time(i32) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @getpid(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
